--- a/makefile.template
+++ b/makefile.template
@@ -111,7 +111,8 @@ endif
 ifeq ($(IFP4EST),true)
   P4ESTNEK:=$(S)/nekp4est
   P4ESTNEK_INCLUDES:=-I$(P4ESTNEK) -I$(P4ESTNEK)/DEF
-  P4ESTO := sc_fwrap.o p4est_fwrap.o nekp4est.o nekp4est_tool.o nekp4est_IO.o
+  P4ESTO := sc_fwrap.o p4est_fwrap.o nekp4est.o nekp4est_tool.o nekp4est_IO.o \
+  nekp4est_IO_block.o nekp4est_callb.o
   lFLAGS := ${lFLAGS} $(P4EST_LFLAGS)
 endif
 
@@ -324,11 +325,13 @@ $(OBJDIR)/visit.o        :$S/3rd_party/visit.f;			$(F77) -c $(VISIT_IFLAGS) $(FL
 $(OBJDIR)/nek_in_situ.o  :$S/3rd_party/nek_in_situ.f;	$(F77) -c $(VISIT_IFLAGS) $(FL2) $< -o $@
 
 # nekp4est #######################################################################################
-$(OBJDIR)/sc_fwrap.o       :$(P4ESTNEK)/sc_fwrap.c;       $(CC) -c $(cFL2) $(P4EST_IFLAGS) -I$J $(P4ESTNEK_INCLUDES) $< -o $@
-$(OBJDIR)/p4est_fwrap.o    :$(P4ESTNEK)/p4est_fwrap.c;    $(CC) -c $(cFL2) $(P4EST_IFLAGS) -I$J $(P4ESTNEK_INCLUDES) $< -o $@
-$(OBJDIR)/nekp4est.o       :$(P4ESTNEK)/nekp4est.f;       $(F77) -c $(FL2) $(P4ESTNEK_INCLUDES) $< -o $@
-$(OBJDIR)/nekp4est_tool.o  :$(P4ESTNEK)/nekp4est_tool.f;  $(F77) -c $(FL2) $(P4ESTNEK_INCLUDES) $< -o $@
-$(OBJDIR)/nekp4est_IO.o    :$(P4ESTNEK)/nekp4est_IO.f;    $(F77) -c $(FL2) $(P4ESTNEK_INCLUDES) $< -o $@
+$(OBJDIR)/sc_fwrap.o          :$(P4ESTNEK)/sc_fwrap.c;          $(CC) -c $(cFL2) $(P4EST_IFLAGS) -I$J $(P4ESTNEK_INCLUDES) $< -o $@
+$(OBJDIR)/p4est_fwrap.o       :$(P4ESTNEK)/p4est_fwrap.c;       $(CC) -c $(cFL2) $(P4EST_IFLAGS) -I$J $(P4ESTNEK_INCLUDES) $< -o $@
+$(OBJDIR)/nekp4est.o          :$(P4ESTNEK)/nekp4est.f;          $(F77) -c $(FL2) $(P4ESTNEK_INCLUDES) $< -o $@
+$(OBJDIR)/nekp4est_tool.o     :$(P4ESTNEK)/nekp4est_tool.f;     $(F77) -c $(FL2) $(P4ESTNEK_INCLUDES) $< -o $@
+$(OBJDIR)/nekp4est_IO.o       :$(P4ESTNEK)/nekp4est_IO.f;       $(F77) -c $(FL2) $(P4ESTNEK_INCLUDES) $< -o $@
+$(OBJDIR)/nekp4est_IO_block.o :$(P4ESTNEK)/nekp4est_IO_block.f; $(F77) -c $(FL2) $(P4ESTNEK_INCLUDES) $< -o $@
+$(OBJDIR)/nekp4est_callb.o    :$(P4ESTNEK)/nekp4est_callb.f;    $(F77) -c $(FL2) $(P4ESTNEK_INCLUDES) $< -o $@
 
 # nekpmetis #######################################################################################
 $(OBJDIR)/pmetis_fwrap.o   :$(PMETISNEK)/pmetis_fwrap.c;   $(CC) -c $(cFL2) $(PMETIS_IFLAGS) -I$J $(PMETISNEK_INCLUDES) $< -o $@
